Friendlier deposit-cli workflow

--- a/default.env
+++ b/default.env
@@ -7,19 +7,6 @@ COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 ETH1_NODE=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
-# Number of validators to create with deposit-cli
-NUMVAL=1
-# Advanced: Start index for recovery of validators or adding validators
-VAL_START_INDEX=0
-# Restart policy: Set to no if you do not want services to automatically restart
-RESTART=unless-stopped
-# If you want debug logs, set this to debug instead of info
-LOG_LEVEL=info
-# Uncomment this if you need to restrict teku to use 6 GiB of heap
-#TEKU_LOW_MEM=-Xmx6G
-# Leave this as-is to compile nimbus with support for metrics via grafana. 
-# Change to empty (nothing after first =) to disable that functionality
-NIM_METRICS=NIMFLAGS="-d:insecure"
 # Network to use for eth2. If using main net, set to mainnet.
 NETWORK=pyrmont
 # Network to use for eth1. If using main net, set to mainnet. Not in use for Geth.
@@ -27,8 +14,7 @@ ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
 GETH1_NETWORK=--goerli
  
-
-# Ports you will forward to your staking node. Adjust here if you are
+# P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 ETH1_PORT=30303
 LH_PORT=9000
@@ -38,9 +24,9 @@ NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
-# ETH1 RPC port, important when using shared-eth1.yml
+# ETH1 RPC port, important when using shared-eth1.yml. Also insecure, do not expose to Internet.
 ETH1_RPC_PORT=8545
-# ETH1 WS port, used with Nimbus
+# ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
 # ETH1 RPC CORS open to all. Insecure but allows for easy testing. May also be required on v6-native networks.
 ETH1_RPC_CORS=all
@@ -54,6 +40,17 @@ ETH1_RPC_CORS=all
 ETH1_ANCIENT_BARRIER=3740000
 # Mainnet value
 #ETH1_ANCIENT_BARRIER=11209000
+
+# Uncomment this if you need to restrict teku to use 6 GiB of heap
+#TEKU_LOW_MEM=-Xmx6G
+
+# Leave this as-is to compile nimbus with support for metrics via grafana. 
+# Change to empty (nothing after first =) to disable that functionality
+NIM_METRICS=NIMFLAGS="-d:insecure"
+# Restart policy: Set to no if you do not want services to automatically restart
+RESTART=unless-stopped
+# If you want debug logs, set this to debug instead of info
+LOG_LEVEL=info
 
 # You can set specific version targets and choose
 # binary or source builds below. 
