--- a/maindefault.env
+++ b/maindefault.env
@@ -61,9 +61,10 @@ ETH1_ANCIENT_BARRIER=11209000
 # Doing so is entirely optional, and arguably advanced
 # use.
 
-LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-# Docker tag will eventually be stable or stable-latest when sigp introduce that
-LH_DOCKER_TAG=v0.3.5
+LH_SRC_BUILD_TARGET=stable
+#Docker tag latest once it tracks github `stable`
+LH_DOCKER_TAG=v1.0.0
+#LH_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 LH_DOCKERFILE=Dockerfile.binary
 LH_USER=lighthouse
@@ -98,7 +99,7 @@ BESU_DOCKERFILE=Dockerfile.binary
 BESU_USER=besu
 
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=v1.0.0-beta.3
+PRYSM_DOCKER_TAG=stable
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
