--- a/geth.yml
+++ b/geth.yml
@@ -26,11 +26,9 @@ services:
       - --http
       - --http.addr
       - 0.0.0.0
-      - --http.vhosts=*
-      - --http.corsdomain=*
+      - --http.vhosts=eth1,localhost
       - --http.api
       - eth,net
-      - --ipcdisable
       - --datadir
       - /var/lib/goethereum
       - --port
@@ -44,7 +42,6 @@ services:
       - ${ETH1_WS_PORT}
       - --ws.api
       - eth,net
-      - --ws.origins=*
     command: ${GETH1_NETWORK}
   beacon:
     depends_on:
