Lighthouse docker tag latest updated

--- a/default.env
+++ b/default.env
@@ -58,9 +58,7 @@ LOG_LEVEL=info
 # use.
 
 LH_SRC_BUILD_TARGET=stable
-#Docker tag to latest once it tracks github `stable`
-LH_DOCKER_TAG=v1.0.0
-#LH_DOCKER_TAG=latest
+LH_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 LH_DOCKERFILE=Dockerfile.binary
 LH_USER=lighthouse
