--- a/default.env
+++ b/default.env
@@ -4,6 +4,7 @@ LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
 COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container
+# For Lighthouse, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
