--- a/prometheus/lh-prom.yml
+++ b/prometheus/lh-prom.yml
@@ -23,3 +23,7 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+  - job_name: 'eth1'
+    metrics_path: '/debug/metrics'
+    static_configs:
+      - targets: ['eth1:6060']
