alertmanager email alerts

--- a/default.env
+++ b/default.env
@@ -2,7 +2,7 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml:alerts.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container
 # For Lighthouse, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
@@ -29,6 +29,8 @@ GRAFANA_PORT=3000
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
+# alertmanager port. Ditto insecure, do not expose to Internet.
+ALERTMANAGER_PORT=9093
 
 # Uncomment this if you need to restrict teku to use 6 GiB of heap
 #TEKU_LOW_MEM=-Xmx6G
