--- a/lh-grafana.yml
+++ b/lh-grafana.yml
@@ -23,6 +23,8 @@ services:
       - prom-data:/prometheus
     environment:
       - CLIENT=${COMPOSE_FILE}
+    ports:
+      - '${PROMETHEUS_PORT}:9090'
     expose:
       - 9090/tcp
     entrypoint: choose-config.sh
