--- a/default.env
+++ b/default.env
@@ -14,7 +14,13 @@ NETWORK=pyrmont
 ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
 GETH1_NETWORK=--goerli
- 
+
+# Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
+PRYSM_PEER_COUNT=30
+LH_PEER_COUNT=50
+TEKU_PEER_COUNT=74
+NIM_PEER_COUNT=160
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 ETH1_PORT=30303
