Support for new metanull dashboard

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -12,9 +12,9 @@ COPY ./dashboard.yml /etc/grafana/provisioning/dashboards/
 COPY ./datasource.yml /etc/grafana/provisioning/datasources/
 
 #  prysm_metanull
-ARG prysm_metanull_url='https://raw.githubusercontent.com/metanull-operator/eth2-grafana/master/eth2-grafana-dashboard-single-source.json'
+ARG prysm_metanull_url='https://raw.githubusercontent.com/metanull-operator/eth2-grafana/master/eth2-grafana-dashboard-single-source-beacon_node.json'
 ARG prysm_metanull_file='/etc/grafana/provisioning/dashboards/prysm_metanull.json'
-RUN wget -qcO - $prysm_metanull_url | jq '.title = "prysm_metanull"' | sed 's/job=\\"beacon\\"/job=\\"beacon node\\"/g' >$prysm_metanull_file
+RUN wget -qcO - $prysm_metanull_url | jq '.title = "prysm_metanull"' >$prysm_metanull_file
 
 #  prysm_less_10
 ARG prysm_less_10_url='https://raw.githubusercontent.com/GuillaumeMiralles/prysm-grafana-dashboard/master/less_10_validators.json'
@@ -25,6 +25,11 @@ RUN wget -qcO - $prysm_less_10_url | jq '.title = "prysm_less_10"' >$prysm_less_
 ARG prysm_more_10_url='https://raw.githubusercontent.com/GuillaumeMiralles/prysm-grafana-dashboard/master/more_10_validators.json'
 ARG prysm_more_10_file='/etc/grafana/provisioning/dashboards/prysm_more_10.json'
 RUN wget -qcO - $prysm_more_10_url | jq '.title = "prysm_more_10"' >$prysm_more_10_file
+
+# prysm_ynager
+ARG prysm_ynager_url='https://raw.githubusercontent.com/ynager/grafana-eth-staking/main/dashboard.json'
+ARG prysm_ynager_file='/etc/grafana/provisioning/dashboards/prysm_ynager.json'
+RUN wget -qcO - $prysm_ynager_url | jq '.title = "prysm_ynager"' >$prysm_ynager_file
 
 #  lighthouse_summary
 ARG lighthouse_summary_url='https://raw.githubusercontent.com/sigp/lighthouse-metrics/master/dashboards/Summary.json'
@@ -47,8 +52,10 @@ ARG nimbus_dashboard_url='https://raw.githubusercontent.com/status-im/nimbus-eth
 ARG nimbus_dashboard_file='/etc/grafana/provisioning/dashboards/nimbus_dashboard.json'
 RUN wget -qcO - $nimbus_dashboard_url | jq '.title = "nimbus_dashboard"' >$nimbus_dashboard_file
 
-#  geth_dashboard
-COPY ./geth.json /etc/grafana/provisioning/dashboards/geth_dashboard.json
+# geth_dashboard
+ARG geth_dashboard_url='https://gist.githubusercontent.com/karalabe/e7ca79abdec54755ceae09c08bd090cd/raw/3a400ab90f9402f2233280afd086cb9d6aac2111/dashboard.json'
+ARG geth_dashboard_file='/etc/grafana/provisioning/dashboards/geth_dashboard.json'
+RUN wget -qcO - $geth_dashboard_url | jq '.title = "geth_dashboard"' | jq 'walk(if . == "${DS_PROMETHEUS}" then "Prometheus" else . end)' >$geth_dashboard_file
 
 RUN tree /etc/grafana/provisioning/
 
