--- a/prometheus/prysm-prom.yml
+++ b/prometheus/prysm-prom.yml
@@ -8,19 +8,70 @@ alerting:
   - static_configs:
     - targets:
       # - alertmanager:9093
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
 scrape_configs:
+  - job_name: 'prometheus'
+    scrape_interval: 5s
+    static_configs:
+    - targets: ['prometheus:9090']
   - job_name: 'validator'
+    scrape_interval: 5s
     static_configs:
       - targets: ['validator:8081']
   - job_name: 'beacon node'
+    scrape_interval: 5s
     static_configs:
       - targets: ['beacon:8080']
+  - job_name: 'slasher'
+    static_configs:
+      - targets: ['slasher:8082']
   - job_name: 'node_exporter'
+    scrape_interval: 5s
     static_configs:
       - targets: ['node-exporter:9100']
+  - job_name: 'ping_google'
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets:
+        - 8.8.8.8
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+  - job_name: 'ping_cloudflare'
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets:
+        - 1.1.1.1
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+  - job_name: 'json_exporter'
+    static_configs:
+    - targets: ['json-exporter:7979']
+  - job_name: 'json'
+    metrics_path: /probe
+    static_configs:
+    - targets:
+      - https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd
+    relabel_configs:
+    - source_labels: [__address__]
+      target_label: __param_target
+    - source_labels: [__param_target]
+      target_label: instance
+    - target_label: __address__
+      replacement: json-exporter:7979
+  - job_name: 'cryptowatch'
+    scrape_interval: 300s
+    static_configs:
+      - targets: ['cryptowat-exporter:9745']
