--- a/alertmanager/default_config.yml
+++ b/alertmanager/default_config.yml
@@ -1,3 +1,9 @@
+global:
+  smtp_smarthost: 'smtp.gmail.com:587'
+  smtp_from: 'USER@gmail.com'
+  smtp_auth_username: 'USER@gmail.com'
+  smtp_auth_password: 'APPPASS'
+
 route:
     receiver: 'email'
 
@@ -5,7 +11,3 @@ receivers:
     - name: 'email'
       email_configs:
       - to: 'to@email.com'
-        from: 'from@email.com'
-        smarthost: smtp.gmail.com:587
-        auth_username: 'from@email.com'
-        auth_password: 'password'
