--- a/prometheus/lh-prom.yml
+++ b/prometheus/lh-prom.yml
@@ -2,12 +2,14 @@ global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
+
 # Alertmanager configuration
 alerting:
   alertmanagers:
-  - static_configs:
-    - targets:
-      # - alertmanager:9093
+  - scheme: http
+    static_configs:
+    - targets: 
+      - 'alertmanager:9093'
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
   # - "first_rules.yml"
@@ -23,3 +25,6 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
