--- a/prometheus/nimbus-prom.yml
+++ b/prometheus/nimbus-prom.yml
@@ -1,6 +1,19 @@
 global:
   scrape_interval:     15s 
   evaluation_interval: 15s 
+
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+  - scheme: http
+    static_configs:
+    - targets: 
+      - 'alertmanager:9093'
+
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+rule_files:
+  - "alert_rules.yml"
+
 scrape_configs:
   - job_name: 'nimbus'
     static_configs:      
