--- a/prometheus/default_alert_rules.yml
+++ b/prometheus/default_alert_rules.yml
@@ -1,29 +1,12 @@
 groups:
-- name: containers
+- name: Instances
   rules:
-  - alert: eth1_down
-    expr: absent(container_memory_usage_bytes{name="eth2-docker_eth1_1"})
+  # Alert for any instance that is unreachable for >60 seconds.
+  - alert: InstanceDown
+    expr: up == 0
     for: 60s
     labels:
       severity: critical
     annotations:
-      summary: "eth1 down"
-      description: "eth1 container is down for more than 60 seconds."
-
-  - alert: beacon_down
-    expr: absent(container_memory_usage_bytes{name="eth2-docker_beacon_1"})
-    for: 60s
-    labels:
-      severity: critical
-    annotations:
-      summary: "beacon down"
-      description: "beacon container is down for more than 60 seconds."
-
-  - alert: validator_down
-    expr: absent(container_memory_usage_bytes{name="eth2-docker_validator_1"})
-    for: 60s
-    labels:
-      severity: critical
-    annotations:
-      summary: "validator down"
-      description: "validator container is down for more than 60 seconds."
+      summary: "Instance {{ $labels.instance }} down"
+      description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 60 seconds."
