Prysm fallback eth1 nodes

--- a/default.env
+++ b/default.env
@@ -6,6 +6,9 @@ COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container
 # For Lighthouse, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
+# ETH1 fallback nodes, currently only for Prysm. Can't be empty.
+ETH1_FALLBACK_NODE1=http://eth1:8545
+ETH1_FALLBACK_NODE2=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
 # Network to use for eth2. If using main net, set to mainnet.
