--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -31,6 +31,10 @@ services:
       - 0.0.0.0
       - --http-web3provider
       - ${ETH1_NODE}
+      - --fallback-web3provider
+      - ${ETH1_FALLBACK_NODE1}
+      - --fallback-web3provider
+      - ${ETH1_FALLBACK_NODE2}
       - --p2p-tcp-port
       - ${PRYSM_PORT}
       - --p2p-udp-port
