Increase stop grace period for all eth1 clients

--- a/nm.yml
+++ b/nm.yml
@@ -3,6 +3,7 @@ services:
   eth1:
     restart: "${RESTART}"
     user: ${LOCAL_UID}:${LOCAL_UID}
+    stop_grace_period: 3m
     build:
       context: ./nethermind
       dockerfile: ${NM_DOCKERFILE}
