--- a/besu.yml
+++ b/besu.yml
@@ -3,6 +3,7 @@ services:
   eth1:
     restart: "${RESTART}"
     user: ${LOCAL_UID}:${LOCAL_UID}
+    stop_grace_period: 3m
     build:
       context: ./besu
       dockerfile: ${BESU_DOCKERFILE}
