Fix filename in default.env

--- a/default.env
+++ b/default.env
@@ -34,7 +34,7 @@ NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
-# ETH1 RPC port, important when using shared-eth1.yml. Also insecure, do not expose to Internet.
+# ETH1 RPC port, important when using eth1-shared.yml. Also insecure, do not expose to Internet.
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
