Changes to keep up with current Nimbus and Teku releases

--- a/default.env
+++ b/default.env
@@ -103,7 +103,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 # Used only for source build; binary build defaults to this
 TEKU_USER=teku
 
-NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NIM_SRC_BUILD_TARGET=stable
 # Docker tag will eventually be stable or stable-latest when statusteam introduce that
 NIM_DOCKER_TAG=devel
 # Binary images at docker hub are not for public consumption and won't run. They'd need
