--- a/default.env
+++ b/default.env
@@ -34,6 +34,8 @@ NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
+# Local prysm web UI port. Do not expose to Internet, it is insecure http
+PRYSM_WEB_PORT=7500
 # ETH1 RPC port, important when using eth1-shared.yml. Also insecure, do not expose to Internet.
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
