New Lighthouse validator monitor dashboard

--- a/default.env
+++ b/default.env
@@ -69,11 +69,8 @@ GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 GETH_USER=geth
 
-# Build target dev/nightly until #74 has been pulled into main. At that point, switch to release tracking
-OE_SRC_BUILD_TARGET=dev
-#OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-OE_DOCKER_TAG=nightly
-#OE_DOCKER_TAG=latest
+OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OE_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 OE_DOCKERFILE=Dockerfile.binary
 #Used only for source build; binary build defaults to this
