--- a/teku-grafana.yml
+++ b/teku-grafana.yml
@@ -34,12 +34,14 @@ services:
     build:
       context: ./grafana
     image: grafana
+    environment:
+      - GF_SERVER_HTTP_PORT=${GRAFANA_PORT}
     volumes:
       - grafana-data:/var/lib/grafana
     depends_on:
       - prometheus
     ports: 
-      - ${GRAFANA_PORT}:3000/tcp
+      - ${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
   eth2:
     depends_on:
       - grafana
