--- a/geth-grafana.yml
+++ b/geth-grafana.yml
@@ -1,4 +1,4 @@
-# Not standalone, relies on one of the client-grafana.yml or client-web.yml files,
+# Not standalone, relies on one of the client-grafana.yml files,
 # and requires geth to be in the same "stack" as prometheus and grafana
 version: "3.4"
 services:
