--- a/prysm-grafana.yml
+++ b/prysm-grafana.yml
@@ -19,6 +19,7 @@ services:
     image: prometheus
     volumes:
       - prom-data:/prometheus
+      - ./prometheus/alert_rules.yml:/etc/prometheus/alert_rules.yml
     environment:
       - CLIENT=${COMPOSE_FILE}
     expose:
