--- a/prometheus/lh-prom.yml
+++ b/prometheus/lh-prom.yml
@@ -12,8 +12,7 @@ alerting:
       - 'alertmanager:9093'
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
+  - "alert_rules.yml"
 # A scrape configuration containing beacon node and node exporter
 scrape_configs:
   - job_name: 'nodes'
