Small OpenEthereum config fixes

--- a/default.env
+++ b/default.env
@@ -69,7 +69,7 @@ GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 GETH_USER=geth
 
-OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 OE_DOCKERFILE=Dockerfile.binary
