Added support for official Nimbus docker images

--- a/default.env
+++ b/default.env
@@ -103,12 +103,10 @@ TEKU_DOCKERFILE=Dockerfile.binary
 TEKU_USER=teku
 
 NIM_SRC_BUILD_TARGET=stable
-# Docker tag will eventually be stable or stable-latest when statusteam introduce that
-NIM_DOCKER_TAG=devel
-# Binary images at docker hub are not for public consumption and won't run. They'd need
-# to be built with NIMFLAGS="-d:disableMarchNative" to work. This can become binary
-# once statusteam create docker images meant for public use.
-NIM_DOCKERFILE=Dockerfile.source
+NIM_DOCKER_TAG=amd64-latest
+# Change to Dockerfile.source to build from source
+NIM_DOCKERFILE=Dockerfile.binary
+# Used only for source build; binary build defaults to "user"
 NIM_USER=nimbus
 
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
