Changes for geth 1.10

--- a/default.env
+++ b/default.env
@@ -13,10 +13,8 @@ ETH1_FALLBACK_NODE2=http://eth1:8545
 GRAFFITI=eth2-docker
 # Network to use for eth2. If using main net, set to mainnet.
 NETWORK=pyrmont
-# Network to use for eth1. If using main net, set to mainnet. Not in use for Geth.
+# Network to use for eth1. If using main net, set to mainnet.
 ETH1_NETWORK=goerli
-# If using Geth as the eth1 node and main net, comment out.
-GETH1_NETWORK=--goerli
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
 PRYSM_PEER_COUNT=30
