Changes to deposit-cli UX

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ docker-compose.yml
 .eth2/*
 !.eth2/README.md
 !.eth2/validator_keys/.empty
+!.eth2/seed_check/.empty
 *.swp
 alertmanager/config.yml
