Change Lighthouse and Prysm defaults to allow using infura for initial sync

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -35,6 +35,8 @@ services:
       - ${LH_PEER_COUNT}
       - --eth1-endpoints
       - ${ETH1_NODE}
+      - --eth1-blocks-per-log-query
+      - "150"
       - --debug-level=${LOG_LEVEL}
   validator:
     restart: "${RESTART}"
